@@ -118,6 +118,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.3.0</version>
+        <configuration>
+          <includes>
+            <include>**/*Test.kt</include>
+          </includes>
+          <useSystemClassLoader>false</useSystemClassLoader>
+          <includeJUnit5Engines>true</includeJUnit5Engines>
+          <argLine>-Djava.security.manager=allow</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
